<resources>
    <string name="app_name">KanakkPusthakam</string>

    <!--Activity titles -start -->

    <!--Title of TripHistoryActivity-->
    <string name="title_trip_history">Trips\' History</string>

    <!--Title of the AddMember Activity-->
    <string name="add_member">Add member</string>

    <!--Title of InvolvementActivity-->
    <string name="title_activity_involvement">Involvement</string>

    <!--Activity titles -end -->



    <!--Dialog boxes -start -->

    <!--Title of the add trip dialog-->
    <string name="add_trip_dialog_title">Start new trip</string>

    <!--Title of the add trip dialog-->
    <string name="add_expense_dialog_title">Add new expense</string>

    <!--Hint of the add  trip dialog-->
    <string name="add_trip_dialog_hint">Trip title</string>

    <!--Hint of the add  trip dialog-->
    <string name="add_expense_dialog_hint">Expense title</string>

    <!--negative option of add trip dialog-->
    <string name="cancel">cancel</string>

    <!--positive option of add trip dialog-->
    <string name="start">Start</string>

    <!--Message for delete dialog box-->
    <string name="delete_dialog_message">Are you sure you want to delete this?</string>

    <!--Dialog boxes -end -->




    <!--Toast texts -start -->

    <!--Toast text for empty named member-->
    <string name="name_absent">You haven\'t entered a name.</string>

    <!--Toast text for expenseInputActivity if no money is entered-->
    <string name="no_money">There has to be at least one person spending some money.</string>

    <!--Toast text for no members to spend money-->
    <string name="no_members">You\'ve to add at least one member to start adding expenses.</string>

    <string name="expense_deleted">Expense deleted</string>
    <string name="member_deleted">Member deleted</string>
    <string name="member_not_deleted">Member has unsettled expenses, cannot delete.</string>
    <string name="no_member_name_toast">Please select a member name from the drop-down list.</string>
    <string name="no_cash_toast">You haven\'t entered any amount.</string>
    <!--Toast texts -end -->




    <!--Empty View Texts -start -->

    <!--Text in the empty view of the TripHistory Page.-->
    <string name="trips_empty_text_one">Looks like you haven\'t started any trips yet.</string>
    <string name="trips_empty_text_two">Press the \"+\" button to get started.</string>

    <!--Text in the empty view of the TripHistory Page.-->
    <string name="members_empty_text_one">Looks like you\'re on your own.</string>
    <string name="members_empty_text_two">Press the button on the top right to add new members.</string>

    <!--Text in the empty view of the TripHistory Page.-->
    <string name="expense_empty_text_one">Looks like you haven\'t had any expenses yet.</string>
    <string name="expense_empty_text_two">Press the \"+\" button to start spending.</string>

    <!--Empty View Texts -end -->




    <!--Menu Options -start -->

    <!--Title for tick mark menu item-->
    <string name="done">Done</string>

    <!--Menu item for help text snackbar-->
    <string name="help_menu">Help</string>

    <string name="delete">Delete</string>
    <string name="delete_all_expenses">Delete all expenses</string>
    <string name="select_all">Select all.</string>

    <!--Menu Options -end -->




    <!--Hints and helper texts. -start -->

    <!--Hint for the text input in the add trip dialog-->
    <string name="hint">New member name.</string>

    <!--Helper text for members fragment-->
    <string name="member_help">If the balance is negative, the individual should pay that much money and if it is positive, others should pay him that much money.</string>

    <!--Hint for EditText in ExpenseInputActivity-->
    <string name="enter_cash">Enter cash spent.</string>

    <!--Help-text for InvolvementActivity-->
    <string name="involvement_help">Select the members who were involved in the expense.</string>

    <!--Hints and helper texts. -end -->





    <!--Text for the add button in Add member activity-->
    <string name="add">Add</string>

    <!--Text for the clear button in Add member activity-->
    <string name="clear">Clear</string>



    <!--Headings of the table in membersFragment-->
    <string name="name">Name</string>
    <string name="cash">Cash Spent</string>
    <string name="cash_rolled">Cash</string>
    <string name="expense">Expense</string>
    <string name="balance">Balance</string>



</resources>
